2005-07-24  Ulrich Drepper  <drepper@redhat.com>

	* wcsmbs/bits/wchar2.h: Use __FILE not FILE.

2005-07-22  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/fxprintf.c (__fxprintf): Define variable more local.

2005-07-22  Jakub Jelinek  <jakub@redhat.com>

	* wcsmbs/bits/wchar2.h (__vfwprintf_chk, __vwprintf_chk): Use
	__gnuc_va_list rather than _G_va_list.

2005-07-22  Roland McGrath  <roland@redhat.com>

	[BZ #869]
	* Makerules ($(objpfx)stubs): Fix last change.

2005-07-21  Roland McGrath  <roland@redhat.com>

	* nscd/Makefile ($(objpfx)nscd): Pass $(nscd-cflags) to $(LINK.o).

	* stdlib/Makefile (headers): Move bits/wchar.h to ...
	* wcsmbs/Makefile (headers): ... here.  Add bits/wchar2.h too.

2005-07-21  Jakub Jelinek  <jakub@redhat.com>

	* wcsmbs/bits/wchar2.h (swprintf): Remove format argument.
	* debug/tst-chk1.c (do_test): Add test for swprintf with format
	being the last argument.

2005-07-21  Thorsten Kukuk  <kukuk@suse.de>

	* debug/getgroups_chk.c (__getgroups_chk): Fix return value.

	* stdio-common/fxprintf.c: Include string.h.

2005-07-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/fpu/libm-test-ulps: Adjust expected atan2f results.
	* sysdeps/powerpc/fpu/libm-test-ulps: Likewise.
	* sysdeps/s390/fpu/libm-test-ulps: Likewise.

2005-07-20  Bob Wilson  <bob.wilson@acm.org>
            Darin Petkov  <darin@tensilica.com>

	* sysdeps/ieee754/flt-32/e_atan2f.c (pi_lo): Correct exponent value.

2005-07-20  Jakub Jelinek  <jakub@redhat.com>

	* include/stdio.h (__fxprintf): Remove wfmt argument.
	* stdio-common/fxprintf.c: Include assert.h, ctype.h and wchar.h.
	(__fxprintf): Remove wfmt argument, create wfmt format string on
	the fly from fmt.
	* argp/argp-fmtstream.c: Adjust all __fxprintf callers.
	* argp/argp-help.c: Likewise.
	* assert/assert-perr.c: Likewise.
	* assert/assert.c: Likewise.
	* gmon/gmon.c: Likewise.
	* inet/rcmd.c: Likewise.
	* malloc/obstack.c: Likewise.
	* misc/error.c: Likewise.
	* misc/getpass.c: Likewise.