@@ -1,6 +1,8 @@
 2005-07-24  Ulrich Drepper  <drepper@redhat.com>
 
 	* wcsmbs/bits/wchar2.h: Use __FILE not FILE.
+	* wcsmbs/Makefile: Add rules to build and run tst-wchar-h.
+	* wcsmbs/tst-wchar-h.c: New file.
 
 2005-07-22  Ulrich Drepper  <drepper@redhat.com>
 
